--- a/travel.html
+++ b/travel.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/travel.jpg" type="image/x-icon">
     <title>HHS Travel Blog</title>
+    <link rel="stylesheet" href="travel.css">
 </head>
 
 <body>
-    <h1><i>My Travel Blog</i></h1>
+    <h1 class="travel1"><i>My Travel Blog</i></h1>
     <div>
-        <h2>My Travel Experience</h2>
+        <h2 class="travel2">My Travel Experience</h2>
         <p>Cox's Bazar, the world's longest natural sandy sea beach, offers a breathtaking experience with its golden shores and turquoise waters. Visitors can enjoy relaxing walks along the beach, vibrant sunsets, and the serene sound of waves. The local
             seafood delicacies and vibrant markets add to the cultural charm. Excursions to nearby attractions like Himchari National Park and Inani Beach provide opportunities for adventure and scenic beauty. The warm hospitality of the locals makes
             the visit truly memorable.
@@ -19,7 +20,7 @@
         </p>
     </div>
     <span>
-        <h3><b>What I Bought</b></h3>
+        <h3 class="3rd"><b>What I Bought</b></h3>
         <ol>
             <li>Sutki</li>
             <li>Gift</li>
@@ -27,7 +28,7 @@
         </ol>
     </span>
     <span>
-        <h3><b>My Favorite Food</b></h3>
+        <h3 class="3rd"><b>My Favorite Food</b></h3>
         <ol>
             <li>Sea Fish</li>
             <li>BBQ</li>
@@ -37,7 +38,7 @@
        <img src="images/2.jpeg" alt="Crab" width="400" height="300">
     </span>
     <span>
-        <h3><b>What Favorite Food I Eat</b></h3>
+        <h3 class="3rd"><b>What Favorite Food I Eat</b></h3>
         <ul>
             <li>Sea Fish</li>
             <li>Fish BBQ</li>
@@ -45,7 +46,7 @@
         </ul>
     </span>
     <span>
-        <h3>My Favorite Song</h3>
+        <h3 class="3rd">My Favorite Song</h3>
         <p>Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o">here</a> to listen my favorite song</p>
     </span>
 
