--- a/travel.html
+++ b/travel.html
@@ -11,25 +11,25 @@
 
 <body>
     <h1 class="travel1"><i>My Travel Blog</i></h1>
-    <div>
+    <div id="t1">
         <h2 class="travel2">My Travel Experience</h2>
-        <p>Cox's Bazar, the world's longest natural sandy sea beach, offers a breathtaking experience with its golden shores and turquoise waters. Visitors can enjoy relaxing walks along the beach, vibrant sunsets, and the serene sound of waves. The local
+        <p id="t2">Cox's Bazar, the world's longest natural sandy sea beach, offers a breathtaking experience with its golden shores and turquoise waters. Visitors can enjoy relaxing walks along the beach, vibrant sunsets, and the serene sound of waves. The local
             seafood delicacies and vibrant markets add to the cultural charm. Excursions to nearby attractions like Himchari National Park and Inani Beach provide opportunities for adventure and scenic beauty. The warm hospitality of the locals makes
             the visit truly memorable.
             <button>Read more</button>
         </p>
     </div>
-    <span>
-        <h3 class="3rd"><b>What I Bought</b></h3>
-        <ol>
+    <span id="t3">
+        <h3 class="travel3"><b>What I Bought</b></h3>
+        <ol class="order">
             <li>Sutki</li>
             <li>Gift</li>
             <li>Achar</li>
         </ol>
     </span>
-    <span>
-        <h3 class="3rd"><b>My Favorite Food</b></h3>
-        <ol>
+    <span id="t4">
+        <h3 class="travel3"><b>My Favorite Food</b></h3>
+        <ol class="order">
             <li>Sea Fish</li>
             <li>BBQ</li>
             <li>Crab</li>
@@ -37,17 +37,17 @@
        <img src="images/1.jpeg" alt="Sea Fish" width="400" height="300">
        <img src="images/2.jpeg" alt="Crab" width="400" height="300">
     </span>
-    <span>
-        <h3 class="3rd"><b>What Favorite Food I Eat</b></h3>
-        <ul>
+    <span id="t5">
+        <h3 class="travel3"><b>What Favorite Food I Eat</b></h3>
+        <ul class="order">
             <li>Sea Fish</li>
             <li>Fish BBQ</li>
             <li>Crab</li>
         </ul>
     </span>
-    <span>
-        <h3 class="3rd">My Favorite Song</h3>
-        <p>Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o">here</a> to listen my favorite song</p>
+    <span id="t6">
+        <h3 class="travel3">My Favorite Song</h3>
+        <p id="t7">Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o">here</a> to listen my favorite song</p>
     </span>
 
 </body>
