--- a/travel.html
+++ b/travel.html
@@ -47,7 +47,7 @@
     </span>
     <span id="t6">
         <h3 class="travel3">My Favorite Song</h3>
-        <p id="t7">Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o">here</a> to listen my favorite song</p>
+        <p id="t7">Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o" target="_blank">here</a> to listen my favorite song</p>
     </span>
 
 </body>
