--- a/travel.html
+++ b/travel.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/travel.jpg" type="image/x-icon">
+    <link rel="icon" href="importent/travel.jpg" type="image/x-icon">
     <title>HHS Travel Blog</title>
     <link rel="stylesheet" href="travel.css">
 </head>
@@ -34,8 +34,8 @@
             <li>BBQ</li>
             <li>Crab</li>
         </ol>
-       <img src="images/1.jpeg" alt="Sea Fish" width="400" height="300">
-       <img src="images/2.jpeg" alt="Crab" width="400" height="300">
+       <img src="importent/1.jpeg" alt="Sea Fish" width="400" height="300">
+       <img src="importent/2.jpeg" alt="Crab" width="400" height="300">
     </span>
     <span id="t5">
         <h3 class="travel3"><b>What Favorite Food I Eat</b></h3>
@@ -49,6 +49,14 @@
         <h3 class="travel3">My Favorite Song</h3>
         <p id="t7">Click <a href="https://www.youtube.com/watch?v=SYe-x9ZQF7o" target="_blank">here</a> to listen my favorite song</p>
     </span>
+    <div id="t8">
+        <h3 class="travel3">Audio & Video</h3>
+        <p>Listen Audio</p>
+        <audio controls src="importent/avala-mountain-scenery-245994.mp3"></audio>
+        <p>Watch Video</p>
+        <video controls src="importent/video1.mp4"></video>
+
+    </div>
 
 </body>
 
